Update Development Director Shadow Program links

--- a/sites/handbook/source/handbook/engineering/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/index.html.md.erb
@@ -396,7 +396,7 @@ There is a program to find a mentor or to become a mentor at GitLab described on
 
 ### Engineering director shadow program
 
-You can find more information on this experimental program in [this handbook page](/handbook/engineering/readmes/wayne-haber/development-director-shadow-experiment.html).
+You can find more information on this experimental program on the [Development Director Shadow Program](/handbook/engineering/development/shadow/director-shadow-program.html) handbook page.
 
 ## Pairing Engineers on priority::1/severity::1 Issues
 
