--- a/source/direction/template.html.md.erb
+++ b/source/direction/template.html.md.erb
@@ -43,7 +43,7 @@ The following 6-minute video gives a quick overview into where the GitLab produc
 GitLab competes in a large market space, with a [CSM](https://internal-handbook.gitlab.io/handbook/product/investment/) estimated at ~$18B in 2024. GitLab has recently surpassed the $150M ARR milestone, with unusually high revenue growth and retention rates.  GitLab is uniquely positioned in the market with a vision to offer a single application for the entire DevOps lifecycle.  GitLab competes across numerous market segments and aims to deliver value in [80+ market categories](/direction/maturity/#category-maturity). GitLab’s product vision is uniquely ambitious, as we were the first DevOps player to take a [single application approach](/single-application/). From idea to production, GitLab helps teams improve cycle time from weeks to minutes, reduce development process costs, and enable a faster time to market while increasing developer productivity. With software “eating the world,” this is widely viewed as a mission-critical value proposition for customers.  We also have a number of [tailwinds](/handbook/leadership/biggest-tailwinds/) in the form of cloud adoption, Kubernetes adoption, and DevOps tool consolidation, which are helping fuel our rapid growth.  Finally, GitLab has an open source community and distribution model, which has exposed the value of GitLab to millions of developers and has sped up the maturation of our product through [more than 200 monthly improvements](https://gitlab.biterg.io/goto/937475d38035f496df3501c9b30af5ef) to the GitLab codebase from our users.
 
 ### Strategic Challenges
-1. **Tension between Breadth and Depth:** GitLab’s ambitious single application product vision means we need to build out feature function value across a very large surface area.  Our challenge is to drive the right balance between breadth and depth in our product experience.  In recent years, we have optimized for breadth. To win and retain more sophisticated enterprise customers, we need to effectively [seed then nurture](/strategy/#seed-then-nurture) in areas of the product that generate usage and revenue.  With so much product surface area to deliver in a single application experience, it is a big UX challenge to keep the experience simple, consistent, and seamless between DevOps phases.
+1. **Tension between Breadth and Depth:** Our ambitious single-application product vision means we need to build out feature function value across a very large surface area. With so much to deliver in a single application, it is a big UX challenge to keep the experience simple, consistent, and seamless between DevOps phases. Our challenge is to drive the right balance between breadth and depth by retaining a [seed then nurture](/strategy/#seed-then-nurture) approach in new product areas while simultaneously improving existing product areas that generate usage and revenue. Shifting more focus to product depth will allow us to win and retain sophisticated enterprise customers.  
 1. **GitLab.com and Self-Managed:** Another challenge we face is the balance between our self-managed and GitLab.com offerings.  GitLab's early paying customers were more interested in self-managed, and the majority of our customers use this offering today.  As a result, we focused heavily on delivering a great self-managed customer experience.  However, as the market shifts toward cloud adoption, we are seeing an increasing demand for our GitLab.com offering.  We now need to rapidly meet the same enterprise-grade security, reliability, and performance expectations our paying customers have come to expect from self-managed in our SaaS (.com offering).
 1. **Wide Customer Profile:** We also serve a wide range of customers, from individual contributor developers to large enterprises, across all vertical markets.  This range of deployment options and customer sizes makes our business complex and makes it hard to optimize the customer experience for all customer sizes.  Over the past few years, we have prioritized enabling our direct sales channel, but in the process have not focused enough on great customer experiences around self-service purchase workflows, onboarding, and cross-stage adoption.
 1. **Competition:** Finally, we have formidable competition from much larger companies, including Microsoft, Atlassian, and Synopsys to name a few.  Microsoft is starting to mimic our single application positioning, and while behind us in the journey, have substantial resources to dedicate to competing with GitLab.
@@ -102,7 +102,7 @@ We are investing [in the following manner](/handbook/product/product-processes/#
 
 ## Personas
 
-[Personas](/handbook/product/personas/) are the people we design for. We’ve started down the path of having developers, security professionals, and operations professionals as first-class citizens; letting each person have a unique experience tailored to their needs. We want GitLab to be the main interface for all of these people. Show up at work, start your day, and load up GitLab. And that’s already happening.
+[Personas](/handbook/product/personas/) are the people we design for. Developers, security professionals, and operations professionals are currently the primary personas we focus on, and we tailor our user experience to their needs. We want GitLab to be the main interface for people in these roles, so they can show up at work, start their day, and load up GitLab. And that’s already happening.
 
 But there are a lot of other roles involved with the development and delivery of software. That is the ultimate GitLab goal - where everyone involved with software development and delivery uses a single application so they are on the same page with the rest of their team. We are rapidly expanding our user experience for [Designers](/handbook/product/personas/#presley-product-designer), [Compliance Managers](/handbook/product/personas/#cameron-compliance-manager), [Product Managers](/handbook/product/personas/#parker-product-manager), and [Release Managers](/handbook/product/personas/#rachel-release-manager). We’ll also be expanding to the business side, with Executive visibility and reporting. While we’re still calling it DevOps, we’re really expanding the definition of DevOps and delivering it all as a single application.
 
@@ -133,19 +133,29 @@ We continue to see massive growth opportunities on SaaS. We made a lot of great 
 
 We will continue this theme into FY23.
 
-### Improve key workflow usability
+### Improve product usability
 
 _Performance Indicator: [Usability Benchmarking](https://about.gitlab.com/handbook/product/ux/performance-indicators/#usability-benchmarking-overall-score-by-stage) improvements for key workflows_
 
-In FY22 we had a broad effort to improve usability. We accomplished a lot. We also learned that we need a concerted effort to improve key workflows as they are often complex, require cross-functional alignment and drive a majority of usability feedback about the product. For FY23 we aim to provide:
+In FY23, we are shifting to a usability-first mindset in our R&D organization. The value of GitLab hinges on creating a seamless application that provides the functionality of many unconnected applications in a single user interface. Doing this effectively is a challenge that requires deep consideration of user experience in every product decision that we make. 
 
-* Excellent enterprise planning workflows
-* Intuitive Settings & Navigation
-* Onboarding/learnability to drive multi-stage adoption
-* A code review experience that is more efficient and intuitive for both reviewers and authors. Key outcomes include less average time spent per line of change, and fewer review cycles on average.
-* A pipeline creating and editing experience that is intuitive, and customizable by central platform teams
-* A deployment workflow that enables collaboration between platform and app teams to perform safe, reliable, continuous deployment to production environments
+Through user research and speaking with customers, we know that a concerted effort is required to improve our key workflows. They are often complex and require cross-functional alignment, but they also drive a majority of usability feedback about our product. Iteration is one of our core values to deliver new features quickly, but whether we are improving existing features or creating new ones, we must remember that iteration focuses on a smaller scope, not on lower quality. Sid describes this nuance in his blog post entitled [Don’t confuse these 12 shortcuts with iteration](https://about.gitlab.com/blog/2021/12/01/dont-confuse-these-twelve-shortcuts-with-iteration/).
 
+In FY23, we're focused on the following user experience initiatives:
+
+* Intuitive [Navigation](https://gitlab.com/groups/gitlab-org/-/epics/8481) 
+* [Migrating UI components](https://gitlab-org.gitlab.io/frontend/pajamas-adoption-scanner/) to our Pajamas Design System for consistency, accessibility, and team velocity improvements.
+* Assessing the UX quality of key workflows through [Usability Benchmarking](https://about.gitlab.com/handbook/product/ux/ux-research-training/usability-benchmarking/) and [generating insights](https://gitlab.com/groups/gitlab-org/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Usability%20benchmark&first_page_size=20) to drive improvements.
+* Onboarding/learnability to drive multi-stage adoption _NOTE: We really haven't prioritized this in FY23_
+
+We're also focused on improving usability in these key workflows:
+
+* Excellent enterprise planning workflows _NOTE: I'm not sure what we're including in this._
+* A code review experience that is more [efficient and intuitive](https://gitlab.com/groups/gitlab-org/-/epics/7592) for both reviewers and authors. Key outcomes include less average time spent per line of change, and fewer review cycles on average.
+* A [pipeline creating and editing](https://gitlab.com/groups/gitlab-org/-/epics/4499) experience that is [intuitive](https://gitlab.com/groups/gitlab-org/-/epics/7289), and [customizable](https://gitlab.com/groups/gitlab-org/-/epics/7462) by central platform teams. 
+* A deployment workflow that enables [collaboration](https://gitlab.com/groups/gitlab-org/-/epics/7819) between [platform and app teams](https://gitlab.com/gitlab-org/gitlab/-/issues/352186/) to perform safe, reliable, [continuous deployment](https://gitlab.com/groups/gitlab-org/-/epics/8464) to production [environments](https://gitlab.com/gitlab-org/gitlab/-/issues/375444).
+
+For a more detailed view of UX initiatives, see the [UX FY23 Direction](https://about.gitlab.com/handbook/product/ux/#fy23-direction).
 
 ### Extend our lead in CI/CD
 
