--- a/sites/handbook/source/handbook/product/product-leadership/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-leadership/index.html.md.erb
@@ -62,7 +62,7 @@ The VP and Product Operations will be assigned an [automatated issue](https://gi
 | 2022-08-24 | Hillary Benson | [Issue 4627](https://gitlab.com/gitlab-com/Product/-/issues/4627) |
 | 2022-09-14 | Justin Farris and David DeSanto | [Issue 4787](https://gitlab.com/gitlab-com/Product/-/issues/4787) |
 | 2022-10-18 | Taylor McCaslin | [Issue 4912](https://gitlab.com/gitlab-com/Product/-/issues/4912) |
-| 2022-11-10 | Joshua Lambert | TBD |
+| 2022-11-10 | Joshua Lambert | [Issue 5026](https://gitlab.com/gitlab-com/Product/-/issues/5026) |
 | 2022-12-14 | Omar Fernandez | TBD |
 | 2023-01-?? | TBD | TBD | 
 | 2023-02-?? | TBD | TBD |
