Remove errant note from Product Direction

--- a/source/direction/template.html.md.erb
+++ b/source/direction/template.html.md.erb
@@ -150,7 +150,7 @@ In FY23, we're focused on the following user experience initiatives:
 
 We're also focused on improving usability in these key workflows:
 
-* Excellent enterprise planning workflows _NOTE: I'm not sure what we're including in this._
+* Excellent enterprise planning workflows.
 * A code review experience that is more [efficient and intuitive](https://gitlab.com/groups/gitlab-org/-/epics/7592) for both reviewers and authors. Key outcomes include less average time spent per line of change, and fewer review cycles on average.
 * A [pipeline creating and editing](https://gitlab.com/groups/gitlab-org/-/epics/4499) experience that is [intuitive](https://gitlab.com/groups/gitlab-org/-/epics/7289), and [customizable](https://gitlab.com/groups/gitlab-org/-/epics/7462) by central platform teams. 
 * A deployment workflow that enables [collaboration](https://gitlab.com/groups/gitlab-org/-/epics/7819) between [platform and app teams](https://gitlab.com/gitlab-org/gitlab/-/issues/352186/) to perform safe, reliable, [continuous deployment](https://gitlab.com/groups/gitlab-org/-/epics/8464) to production [environments](https://gitlab.com/gitlab-org/gitlab/-/issues/375444).
