Added things and accomplishments section

--- a/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-authoring/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-authoring/index.html.md.erb
@@ -34,6 +34,13 @@ description: "The GitLab team page for the Pipeline Authoring Group"
 - Pipeline creation: process of building and persisting a pipeline including multi-project
   or child pipelines.
 
+## Exciting things and accomplishments
+This section will list the top three most recent, exciting accomplishments from the team.
+
+* We [added](https://gitlab.com/gitlab-org/gitlab/-/issues/293645) in the `rules:change:compare:` which allows you to compare a branches and prevent those pipelines or jobs to run every time a new branch is pushed.
+* We welcomed our new Backend Engineer to the team, [Leaminn Ma](https://gitlab.com/lma-git)!!
+* We welcomed our new Interim Senior Product Designer to the team, [Kevin Comoli](https://gitlab.com/kcomoli)!!
+
 ## Team Members
 
 <%= direct_team(manager_role: 'Fullstack Engineering Manager, Verify:Pipeline Authoring') %>
