Remove and rearrange TeamOps action tenets to create balance across four Guiding Principles

--- a/sites/handbook/source/handbook/teamops/informed-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/informed-decisions/index.html.md.erb
@@ -60,6 +60,17 @@ Maintaining a single source of truth for elements that few individuals need isn'
 
 In conventional organizations, multiple departments may maintain their own version of this list. Crucially, this is either not acknowledged as a problem, or there is no known solution to removing duplication. In an organization powered by TeamOps, duplicate sources may exist initially. Once duplication is discovered, everyone can contribute to the solve (collaborating to create a SSoT) and one's default is to *actively work to remove duplication*. At GitLab, the application list [lives in our handbook](/handbook/business-technology/tech-stack/), and integrity is ensured thanks to [version control](/topics/version-control/). 
 
+
+## Say why, not just what
+
+It can be tempting for a risk-intolerant organization to announce a change without much context in hopes that it will "fly under the radar" and avoid controversy. TeamOps organizations recognize that up-front transparency is a foundational element to more frequent decision-making. This requires you to not only share ***what*** the decision is, but also [***why***](/handbook/values/#say-why-not-just-what) it's being made. 
+
+While saying "why" does not mean *justifying* every decision against other alternatives, it does require a DRI or leader to [articulate their reasoning](/handbook/values/#articulate-when-you-change-your-mind). This prevents speculation and [builds trust](/handbook/leadership/building-trust/), which is one of the traits of being a [great remote manager](/company/culture/all-remote/being-a-great-remote-manager/). Beyond these cultural benefits, saying "why" also creates institutional memory that is powerful for the future efficiency of your organization. When a related change is being made a year later, the new DRI will have access to the [well-documented](/company/culture/all-remote/handbook-first-documentation/#why-does-handbook-first-documentation-matter) reasoning behind past decisions. They're able to better understand the context, avoid duplicating work or mistakes, and make more consecutive decisions.
+
+**Here's an example:** [Updating GitLab's recruitment privacy policy](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/107652)
+
+GitLab's Recruitment Privacy Policy was updated. Rather than updating the policy behind closed doors, the [merge request](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/107652)  outlines the *why*. It provides context into how the change enables cross-functional groups to work more efficiently. The explanation of *why* enables more thoughtful conversation around a potentially polarizing topic (privacy). 
+
 ## Low-context communication
 
 [Low-context communication](/company/culture/all-remote/effective-communication/) assumes that the person you're communicating with has little or no context about the topic at hand. The person delivering the information is responsible for making sure your communication includes everything the recipient will need. This empowers individuals to make decisions and take action without needing to ask unnecessary follow-up questions that could have been avoided.
