Add my name as SSC

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -220,6 +220,7 @@
 [Alex Ives]: /company/team/#alexives
 [Barry Firman]: /company/team/#gitlabbarry
 [Firdaws Farukh]: /company/team/#ffarukh
+[Asmaa Hassan]:  /company/team/#asmaa.hassan
 
 [Suri Patel]: /company/team/#suripatel
 [Chrissie Buchanan]: /company/team/#cbuchanan
