--- a/sites/uncategorized/source/blog/blog-posts/2022-11-03-cadence-is-everything-10x-engineering-organizations-for-10x-engineers.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-03-cadence-is-everything-10x-engineering-organizations-for-10x-engineers.html.md.erb
@@ -1,15 +1,17 @@
 ---
 title: "Cadence is everything: 10x engineering organizations for 10x engineers"
-author: Sid Sidbrandij
-author_gitlab: Systes
+author: Sid Sijbrandij
+author_gitlab: systes
 author_twitter: systes
 categories: engineering
 tags: DevOps, developers, careers
+featured: yes
 description: GitLab CEO and co-found Sid Sijbrandij on the importance of cadence
   in engineering organizations.
 image_title: /images/blogimages/Athlinks_running.jpg
 twitter_text: "@systes on how to create a 10x engineering org for 10x engineers"
 ---
+
 I confess: Although I don’t believe in Bigfoot or Nessie and do believe the moon landings happened, I am convinced that despite the current orthodoxies, [10x engineers](https://svdictionary.com/words/10x-engineer) very much exist and are a major positive force for the industry, and potentially your organization.  If you can find one, convince her to work for you and keep her happy and productive (but I repeat myself).
 
 Alas, finding one is not easy, and no, job adverts stating “We only hire the best” don’t help. However, what you can do is structure your development organization in a way to make such a person productive.  
