Internal link to core solutions page.

--- a/source/direction/supply-chain/index.html.md.erb
+++ b/source/direction/supply-chain/index.html.md.erb
@@ -10,7 +10,7 @@ canonical_path: "/direction/supply-chain/"
 
 We would appreciate your feedback on this direction page. Please [email Sam White](mailto:swhite@gitlab.com) or [propose an MR](https://gitlab.com/gitlab-com/www-gitlab-com/-/edit/master/source/direction/supply-chain/index.html.md.erb) to this page!
 
-The Sec Section maintains GitLab&apos;s vision for Software Supply Chain Security (SSCS) and leads coordination across the many stages that are involved in delivering a comprehensive, quality secure supply chain experience at GitLab. These include, but are not necessarily limited to the following:
+The Sec Section maintains GitLab&apos;s vision for [Software Supply Chain Security (SSCS)](/solutions/supply-chain/) and leads coordination across the many stages that are involved in delivering a comprehensive, quality secure supply chain experience at GitLab. These include, but are not necessarily limited to the following:
 
 - [Manage](/direction/dev/#manage)
 - [Create](/direction/dev/#create)
