Add Peter Lu to categories

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -162,7 +162,8 @@
 [Michael Lunøe]: /company/team/#michael-lunoe
 [Michael Lunøe (Interim)]: /company/team/#michael-lunoe
 [John Cai]: /company/team/#jcaigitlab
-[Juan Silva]: /company/team/#juan-silva.yml
+[Juan Silva]: /company/team/#juan-silva
+[Peter Lu]: /company/team/#plu8
 
 <%# PMM %>
 [Cindy Blake]: /company/team/#cblake2000
