Update with current program stats

--- a/sites/handbook/source/handbook/people-group/learning-and-development/mentor/company-program/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/learning-and-development/mentor/company-program/index.html.md.erb
@@ -9,22 +9,9 @@ title: GitLab Company-Wide Mentorship Program
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-## Apply as a mentor or mentee now!
-
-Click below to apply to this program as a mentor, mentee, or both. 
-
-**Please ensure you've read this entire handbook page before submitting your application!**
-
-<div class="flex-row" markdown="0">
-  <div>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScHVvgO7_NzCNmYG3g3L0BK11TmrKpYN8gqu68tpf-4En0QMA/viewform?usp=sf_link" class="btn btn-purple" style="width:200px;margin:5px;">Apply to be a MENTOR</a>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSev0QP0KO4AJQ2UrQBJj9N6MaWdTQOQr5rN8LHPB-eKhRfSfA/viewform?usp=sf_link" class="btn btn-purple" style="width:200px;margin:5px;">Apply to be a MENTEE</a>
-  </div>
-</div>
-
 ## GitLab Company-Wide [Mentorship](https://about.gitlab.com/handbook/people-group/learning-and-development/mentor/) Program
 
-GitLab's L&D team is excited to announce the 2nd iteration of our Company-Wide mentorship program! Applications for mentors and metees open on 2022-09-15. Keep reading this page for additional program details and timeline. {: .alert .alert-warning}
+GitLab's L&D team kicked-off the 2nd iteration of our Company-Wide mentorship program! Applications for mentors and metees open on 2022-09-15. Keep reading this page for additional program details and timeline. {: .alert .alert-warning}
 
 ## Program structure
 
@@ -87,7 +74,7 @@ As a mentor, you benefit from:
 
 ### Apply
 
-[Click here to apply as a MENTOR!](https://docs.google.com/forms/d/e/1FAIpQLScHVvgO7_NzCNmYG3g3L0BK11TmrKpYN8gqu68tpf-4En0QMA/viewform?usp=sf_link)
+Applications are currently closed.
 
 _Applying for a mentor does not guarantee you a spot in the program and eligibility will be evaluated based on criteria above and program need._
 
@@ -117,23 +104,11 @@ Applications will be prioritized on many points including:
 
 ### Apply
 
-[Click here to apply to be a MENTEE!](https://docs.google.com/forms/d/e/1FAIpQLSev0QP0KO4AJQ2UrQBJj9N6MaWdTQOQr5rN8LHPB-eKhRfSfA/viewform?usp=sf_link)
+Applications are currently closed.
 
 _Applying for a mentee does not guarentee you a spot in the program, and eligibility will be evaluated based on criteria above._
 
 If you've participated in a previous GitLab mentor program, you are welcome to apply again!
-
-## Metrics and Outcomes
-
-Mentors and mentees will complete a pre-program and end of program survey to collect feedback, assess skills, and determine if goals set during mentor/mentee relationships have been set.
-
-Success of this program will be measured by:
-
-1. percentage of mentor/mentee pairs who meet consistently on a bi-weekly basis, with a goal of 95% completion
-1. attendance to live training sessions, with a goal of 95% attendance
-1. quality of feedback of the program from both the mentor and mentee perspective
-1. percentage of mentee goal achieved during mentorship, as reported by mentees with a goal of at least 50% of goal achieved
-1. mentor and mentee career development at GitLab after program conclusion including rates of promotion, transfer, performance growth factors, and retention
 
 
 ## FAQ
@@ -158,17 +133,28 @@ Questions, comments, and feedback can be posted in the [#mentoring](https://app.
 
 ## Results
 
+### Metrics and Outcomes
+
+Mentors and mentees will complete a pre-program and end of program survey to collect feedback, assess skills, and determine if goals set during mentor/mentee relationships have been set.
+
+Success of this program will be measured by:
+
+1. percentage of mentor/mentee pairs who meet consistently on a bi-weekly basis, with a goal of 95% completion
+1. attendance to live training sessions, with a goal of 95% attendance
+1. quality of feedback of the program from both the mentor and mentee perspective
+1. percentage of mentee goal achieved during mentorship, as reported by mentees with a goal of at least 50% of goal achieved
+1. mentor and mentee career development at GitLab after program conclusion including rates of promotion, transfer, performance growth factors, and retention
+
 ### Participation
 
-The following section outlines results of the first iteration of this company wide mentroship program, organized from March to July, 2022.
 
 | Metric | FY23 Q1/Q2 | FY23 Q3/Q4 + FY24 Q1 | 
 | ----- | ----- | ----- |
-| Total Participants | 86 | |
-| Mentor/Mentee Pairs | 47 | |
-| Total Mentors | 39 | |
-| Total Mentees | 47 | |
-| % participants who wouls recommend this program | 95% | |
+| Total Participants | 86 | 110 |
+| Mentor/Mentee Pairs | 47 | 65 |
+| Total Mentors | 39 | 47 |
+| Total Mentees | 47 | 63 |
+| % participants who would recommend this program | 95% | |
 
 ### FY23 Q1/Q2 Details
 
@@ -183,9 +169,4 @@ What mentors and mentees learned from the program:
 1. `How engineers can help non-engineers be successful in the company.`
 1. `We don’t know everything. Don’t be afraid to say I don’t know.`
 
-#### Connecting mentorship to business results
-
-During FY23 Q1, there were 2 mentorship programs running at GitLab. At the end of Q1, all mentees in current programs were asked to complete a short survey to report the affect their mentorship had on their achievement of business and personal goals during the quarter. 17% of mentees  completed the survey. Below are the results:
-
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSQo5yL0DOCgaAQWwXaIYHfb20pGIxlkzkxBB_xgU-rEsNkNa4U1NxevaCIQRZrgExrSQecEng50Kmy/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
