Switching from Memory to Performance

--- a/sites/uncategorized/source/company/team/structure/index.html.md.erb
+++ b/sites/uncategorized/source/company/team/structure/index.html.md.erb
@@ -341,9 +341,11 @@ It is also important to ensure a group doesn't have a scope definition that is s
    We might instead have an internationalization tooling group.
 1. We don't have a performance group.
    Ensuring GitLab is performant is the responsibility of all groups.
-We do have the [Memory group](/handbook/product/categories/#memory-group) and [Database group](/handbook/product/categories/#database-group) whose charters involve consulting and providing guidance for other teams, but should be considered non-blocking.
+   We might instead have a performance tooling group.
 
-The [Memory group](/handbook/product/categories/#memory-group) focused on the specifics of reducing GitLab's memory footprint, creating documentation and tooling to assist in memory related concerns.
+We do have the [Application Performance group](/handbook/product/categories/##application-performance-group) and [Database group](/handbook/product/categories/#database-group) whose charters involve consulting and providing frameworks for other teams, but are considered non-blocking.
+
+The [Application Performance group](/handbook/product/categories/##application-performance-group) is focused on identifying systemic performance bottlenecks, creating documentation, and tooling to assist other groups in understanding and improving the performance of their features.
 
 The [Database group](/handbook/product/categories/#database-group) is focused on the specifics of database management/scaling and to provide consulting for development teams in need of database development guidance.  While database related merge requests still require approval from a database maintainer our [database review](https://docs.gitlab.com/ee/development/database_review.html) process has necessarily scaled beyond just the members of the database team.
 
