Updating phishing guidance

--- a/sites/handbook/source/handbook/security/index.html.md.erb
+++ b/sites/handbook/source/handbook/security/index.html.md.erb
@@ -778,21 +778,16 @@ should never enter sensitive data into that website.
 
 #### What to do if you suspect an email is a phishing attack 
 
-If you suspect that the email is targeted specifically at you or GitLab or
-you received an email from our testing platform please, select **ONE** of the options below: 
-1. Submit the email as phishing using PhishAlarm. 
+If you think an email is suspicious, it may be a phishing attempt targeted at you or GitLab, or it may be a security test. Please report the email to Security by using the ***PhishAlarm*** button in Gmail. It is located in the right hand sidebar of your Gmail workspace. If you don't see the button, the right hand sidebar may be collapsed and you'll need to click the arrows at the bottom right hand corner of the window to expand the sidebar.
 
-![PhishAlarm icon](PhishAlarm.png)
+If you are on a mobile device and using the Gmail app, the PhishAlarm button is toward the bottom of your Gmail app, in the available add-ons section.
 
-PhishAlarm is a Gmail add-on that allows your users to alert security and incident response teams to suspected phishing emails. It will automatically notify GitLab security and the email will be further investigated. (PhishAlarm is found on the right side panel of Gmail. You can hide or show this panel by clicking on the > or < symbol on the bottom right corner of your browser window). 
+If you are using another email client, you may not able to submit the email using the PhishAlarm button. In this case, you may manually submit the phishing email by forwarding it to `phishing@gitlab.com`. ***Note*** Forwarding phishing emails to `phishing@gitlab.com` requires additional steps (follow instructions below). 
+Note that if you use the 'Report Phishing' button at the top right of the Gmail client, this will also require you to follow the manual submission instructions below. This is because the 'Report Phishing' button by Gmail does not provide our security team with the email itself, and only provides us with a notification.
 
-![PhishAlarm icon](PhishAlarmicon.png)
+##### Submission of phishing email via PhishAlarm
+PhishAlarm is found on the right side panel in Gmail. You can hide or show this panel by clicking on the > or < symbol on the bottom right corner of your web browser window
 
-**OR** 
-2. Forward the phishing email as an attachment to `phishing@gitlab.com` for it to be investigated. Forwarding as an attachment helps standardize the workflow to extract the contents of the email for easier analysis. **OR**
-3. Report the email as phishing via built-in Gmail reporting.
-
-##### Option 1 (preferred)
 To submit an email via PhishAlarm to GitLab's Security Team using Gmail:
 
   1. Select the PhishAlarm icon on the right-hand side toolbar in Gmail
@@ -802,37 +797,13 @@ To submit an email via PhishAlarm to GitLab's Security Team using Gmail:
 
 ![PhishAlarm](/handbook/security/PhishAlarm-icon.png)
 
-##### Option 2
+##### Manual submission of phishing email to `phishing@gitlab.com`
 To forward the email as an attachment to GitLab's Security Team using Gmail:
 
-  1. Right click the email
+  1. From a computer (not a mobile device) right click the email
   2. Select "Forward as attachment"
   3. Send it to `phishing@gitlab.com`
 
-##### Option 3
-Gmail offers the option to report the email directly to Google as a
-phishing attempt, which will result in its deletion. Reporting the email
-in this manner will help the security team track phishing metrics and trends over
-time within Google Workspace.
-
-To report the email as `phishing` via built-in Gmail reporting:
-
-  1. Select the "More" button (three dots) on the email in question
-  1. Choose "Report phishing" option from the drop down menu
-
-If you receive an email that appears to come from a service that you utilize,
-but other details of the email are suspicious -- a private message from a
-sender you don't recognize, for example -- do not click on any links in the
-email. Instead use your own bookmark for the site or manually type the address
-of the website into your browser.
-
-Unsolicited email should be treated as phishing emails. For example, if you
-did not register for a site claiming to send you email, do not click on links
-in the email or visit the site.
-
-The Security Team uses automated tooling to analyze your reported attachments. 
-If something is missing from your report, you may be contacted by `mail@tines.io`,
-which is the tooling's no-reply notifyer address. 
 
 #### What to do if you suspect something else is suspicious
 
