--- a/sites/uncategorized/source/blog/blog-posts/2022-11-03-cadence-is-everything-10x-engineering-organizations-for-10x-engineers.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-03-cadence-is-everything-10x-engineering-organizations-for-10x-engineers.html.md.erb
@@ -6,7 +6,7 @@ author_twitter: systes
 categories: engineering
 tags: DevOps, developers, careers
 featured: yes
-description: GitLab CEO and co-found Sid Sijbrandij on the importance of cadence
+description: GitLab CEO and co-founder Sid Sijbrandij on the importance of cadence
   in engineering organizations.
 image_title: /images/blogimages/Athlinks_running.jpg
 twitter_text: "@systes on how to create a 10x engineering org for 10x engineers"
