Update link to workspace example

--- a/sites/uncategorized/source/company/culture/all-remote/workspace/index.html.md.erb
+++ b/sites/uncategorized/source/company/culture/all-remote/workspace/index.html.md.erb
@@ -268,7 +268,7 @@ Research has [found](https://www.bbc.com/worklife/article/20160617-the-never-end
 - GitLab Chief Technology Officer, Eric Johnson, [shares the details of his set up in his README](/handbook/engineering/readmes/eric-johnson/#my-remote-work-setup).
 - Job van der Voort, CEO at Remote, provides [a breakdown of his top-notch home office setup](https://remote.com/blog/maximum-productivity-home-office){:target="_blank"}. 
 - GitLab Developer Evangelist Michael F. [details his current setup](https://dnsmichi.at/all-remote-workspace/){:target="_blank"} with helpful tips on lighting, apps and settings, and how to personalize your workspace. 
-- Emma Bostian, Software Engineer at Spotify, [writes about her home-office tech setup for recording courses and podcasts](https://compiled.blog/blog/my-tech-setup){:target="_blank"} 
+- Emma Bostian, Software Engineer at Spotify, [writes about her home-office tech setup for recording courses and podcasts](https://dev.to/emmabostian/lights-camera-action-my-tech-setup-for-recording-courses-podcasts-2p6j){:target="_blank"} 
 - Andreas Klinger, founder at [Remote First Capital](https://www.remotefirstcapital.com/){:target="_blank"}, maintains an [ongoing Twitter thread](https://twitter.com/andreasklinger/status/1238325463300202497){:target="_blank"} of exceptional at-home workspaces. 
 
 ## What are some tips for creating a productive home office? 
