--- a/source/direction/manage/workspace/templates/_next.erb
+++ b/source/direction/manage/workspace/templates/_next.erb
@@ -1,5 +1,5 @@
 
-* We have completed phase 2 which handled database updates to prepare for migrating features to the new project namespace. At this time, any feature that does not require membership or routing can be migrated from the group level to the project level or vice versa.
+* We have completed phase 2 which handled database updates to prepare for migrating features to the new project namespace. At this time, any features that do not require membership or routing can be migrated from the group level to the project level or vice versa.
   * [Migrating Issues to Namespaces](https://gitlab.com/gitlab-org/gitlab/-/issues/338819)
   * [Migrating Labels to Namespaces](https://gitlab.com/gitlab-org/gitlab/-/issues/338820)
 
