Add GitLab Inc Intern Offer Letter Link

--- a/sites/handbook/source/handbook/people-group/contracts-probation-periods/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/contracts-probation-periods/index.html.md.erb
@@ -24,13 +24,14 @@ The following contracts are for reference only and are viewable by anyone in Git
 - [GitLab Inc., part-time employee offer letter](https://docs.google.com/document/d/13RdKBC0as18SgkU9rU3QD--eZFVcoRkdMn2uXLvfr80/edit?usp=sharing)
 - [GitLab Inc., employee offer letter without OTE (RSU)](https://docs.google.com/document/d/1hyJQncGYpz7JaXrE2pDCGFm-OLziCNOjFv8toj-CnZs/edit?usp=sharing)
 - [GitLab Inc., employee offer letter with OTE (RSU)](https://docs.google.com/document/d/1_PhOFr-wUoJErwOG5AZSs9WopmU5Qp5f-WJpdoj5t_w/edit?usp=sharing)
-- [GitLab Inc., employee offer letter with OTE & Draw (RDU)](https://docs.google.com/document/d/1Yg7nwP49VRTkwd_nUlZiaCQw2qAxtX6HUd2vfF3x79c/edit?usp=sharing)
+- [GitLab Inc., employee offer letter with OTE & Draw (RSU)](https://docs.google.com/document/d/1Yg7nwP49VRTkwd_nUlZiaCQw2qAxtX6HUd2vfF3x79c/edit?usp=sharing)
 - [GitLab Inc., employee offer letter with director bonus](https://docs.google.com/document/d/1RifRP-gJ6KcqdHEVjtu9o66ak4bm2WctaG04szHuhzI/edit?usp=sharing)
 - [GitLab Inc., employee offer letter with signing bonus (RSU)](https://docs.google.com/document/d/1l8Y8fR7ka-E68nBglnHGGuNNadErM4ca4kCTQ-xUh44/edit?usp=sharing)
 - [GitLab Inc., employee offer letter with signing and director bonus](https://docs.google.com/document/d/1dNYdhywryK_4Uqhgc5OzJ2KYYjdp7Lm9TkHGY7YqRNI/edit?usp=sharing)
 - [GitLab Inc., Employee offer letter (Montana)(No OTE)(RSU)](https://docs.google.com/document/d/16JCWY9y-cPf_SUtMy8Lxe0f9BfMvsF_4K_P3JPY-IB0/edit?usp=sharing)
 - [GitLab Inc., Employee offer letter (Montana) (w/OTE)(RSU)](https://docs.google.com/document/d/1qTEx5rlLpMBYv_xD3qmumfSJGCnPX_gANzJQLckOQGU/edit?usp=sharing)
 - [GitLab Inc., Employee offer letter (Montana)(w/ OTE & Draw)(RDU)](https://docs.google.com/document/d/1s0QXWpNlXsMry6zh95x_OLqZagaJQCvwAt1utcYE4Qs/edit?usp=sharing)
+- [GitLab Inc., Intern offer letter (No OTE, no RSU)](https://docs.google.com/document/d/1xmeU24xUk84qtGKKKkhwqvz5uFmJaro4G1T-a7kdjeI/edit?usp=sharing)
 
 **GitLab Federal, LLC**
 
