--- a/sites/uncategorized/source/blog/blog-posts/2018-04-17-remote-work-facilitates-devops.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2018-04-17-remote-work-facilitates-devops.html.md.erb
@@ -45,7 +45,7 @@ Remote teams are already accustomed to transparency, collaboration, and visibili
 
 While a remote workplace culture appears to create a solid foundation upon which a DevOps model can thrive, we concede that remote teams can still encounter challenges to adoption. Poor communication, internal conflict, and a lack of defined processes can hinder any team. However, there are insights that in-office teams can gain from these findings. Because culture is the underpinning of successful DevOps adoption, in-office teams can ease challenges by encouraging teams to work concurrently and by transparently documenting conversations and decisions. Furthermore, a shift towards empathy can help teams gain respect for the work that others accomplish, a change that can increase collaboration and decrease friction.
 
-By creating a collaborative culture, an organization can facilitate a smoother transition to a DevOps model.
+By creating a collaborative culture, an organization can facilitate a smoother [transition to a DevOps model](/blog/2022/10/31/a-snapshot-of-modern-devops-practices-today/).
 
 Does your development team work remotely? Let’s chat about DevOps and remote working! Tweet us [@gitlab](https://twitter.com/gitlab).
 
