--- a/sites/uncategorized/source/blog/blog-posts/2022-11-03-cadence-is-everything-10x-engineering-organizations-for-10x-engineers.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-11-03-cadence-is-everything-10x-engineering-organizations-for-10x-engineers.html.md.erb
@@ -9,7 +9,7 @@ featured: yes
 description: GitLab CEO and co-founder Sid Sijbrandij on the importance of cadence
   in engineering organizations.
 image_title: /images/blogimages/Athlinks_running.jpg
-twitter_text: "@systes on how to create a 10x engineering org for 10x engineers"
+twitter_text: "@sytses on how to create a 10x engineering org for 10x engineers"
 ---
 
 I confess: Although I don’t believe in Bigfoot or Nessie and do believe the moon landings happened, I am convinced that despite the current orthodoxies, [10x engineers](https://svdictionary.com/words/10x-engineer) very much exist and are a major positive force for the industry, and potentially your organization.  If you can find one, convince her to work for you and keep her happy and productive (but I repeat myself).
