--- a/sites/uncategorized/source/blog/blog-posts/2022-07-21-quickly-onboarding-engineers-successfully.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-07-21-quickly-onboarding-engineers-successfully.html.md.erb
@@ -165,3 +165,5 @@ The most successful software companies have a solidified onboarding process and 
 At GitLab we have recently been hiring for our [Remote Development effort](https://about.gitlab.com/direction/create/editor/remote_development/) and many of these items are in play with the engineers we are bringing into the company. We want to improve these processes to make onboarding even easier, mitigating the need for even setting up a specific local development toolchain to be able to ship production code. 
 
 If you think you might be interested in a role at GitLab working on Remote Development, check out our open listings [here](https://boards.greenhouse.io/gitlab/jobs/6201785002).
+
+Read more about [leading endingeering teams](/blog/2022/11/03/cadence-is-everything-10x-engineering-organizations-for-10x-engineers/).
