Adding guidance for changing/removing metrics

--- a/sites/handbook/source/handbook/product/product-intelligence-guide/getting-started/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/product-intelligence-guide/getting-started/index.html.md.erb
@@ -219,6 +219,8 @@ This is what needs to be done:
 1. Insert the query into the `SQL` field of the new chart and click "Run SQL".
 1. Your data should now be visible in Sisense.
 
+## Removing or Changing Metrics
+Please follow process outlined by the guidance for removing and changing metrics that can be found in the [Service Ping lifecycle documentation](https://docs.gitlab.com/ee/development/service_ping/metrics_lifecycle.html).
 
 ## Quick Links
 
