adds link to stable counterparts page

--- a/sites/handbook/source/handbook/engineering/infrastructure/team/reliability/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/infrastructure/team/reliability/index.html.md.erb
@@ -102,6 +102,10 @@ Database Reliability Engineers (DBREs) are focused .
 
  * Build, maintain, and improve database services.
 
+##### Stable Counterparts
+
+The Reliability Team works together with [Stage Groups](https://about.gitlab.com/handbook/product/categories/) to create Stable Counterparts.  See the dedicated [Stable Counterparts handbook page](https://about.gitlab.com/handbook/engineering/infrastructure/team/stable-counterpart.html) for more details on this process.
+
 ### How We Work -- General Workflow
 
 1. Customers open new issues in [Reliability Issue Tracker](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues)
