Update Plan stage focus

--- a/source/direction/dev/template.html.md.erb
+++ b/source/direction/dev/template.html.md.erb
@@ -175,7 +175,7 @@ Within each stage, the listed items below are in **order of priority**. The top 
 
 * Manage: [Workspaces to replace instance-level functionality](https://gitlab.com/groups/gitlab-org/-/epics/4257)
 * Manage: [Slack Integration](https://gitlab.com/groups/gitlab-org/-/epics/7536)
-* Plan: [Groups and Projects Simplification](https://gitlab.com/groups/gitlab-org/-/epics/2885)
+* Plan: [Work Items](https://gitlab.com/groups/gitlab-org/-/epics/6033)
 * Plan: [DORA 4 metrics - extend APIs and analytics capabilities](https://gitlab.com/groups/gitlab-org/-/epics/9070)
 * Plan: [Value Streams Dashboard for Executive](https://gitlab.com/groups/gitlab-org/-/epics/8335)
 * Create: [Remote Development](https://gitlab.com/groups/gitlab-org/-/epics/7948)
